--- a/cssStyles.css
+++ b/cssStyles.css
@@ -2,7 +2,7 @@
     background-color: black;
     width: 100vw;
     height: 100vh;
-    margin: 0;
+    margin: auto;
 }
 #header {
     display:grid;
@@ -134,95 +134,53 @@
     color: white;
 }
 #gamePlay {
-    display:grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
     height: 18em;
     max-height: 100%;
     width: 100vw;
 }
 #text {
     color: white;
-    grid-row: 1/2;
-    grid-column: 2/4;
-    position: center;
+    align-self: center;
+    justify-self: start;
 }
 #gameNarrative {
     text-align: center;
 }
 #playerButtons {
-    grid-column: 2/4;
-    grid-row: 2/5;
-    display: grid;
-    grid-template-rows: 50% 50%;
-    grid-template-columns: 50% 50%;
-    width: 100%;
-    height: 100%;
-}
-#rockButton {
-    grid-row: 1/3;
-    grid-column: 1/2;
-    align-self: center;
-    justify-self: center;
-    max-width: 100%;
-    max-height: 100%;
-    height: 100%;
-    width: 40%;
+   justify-self: center;
+   align-self: center;
+   height: 15em;
+   max-width: 100vw;
+   margin: auto;
 }
 #ROCK {
-    align-self: center;
+    align-self: start;
     justify-self: center;
     border-radius: 50%;
-    max-width: 100%;
-    max-height: 100%;
-    width: 100%;
-    height: 100%;
-}
-#paperButton {
-    grid-row: 1/3;
-    grid-column: 1/3;
-    align-self: center;
-    justify-self: center;
-    max-width: 100%;
+    min-width: 1.5em;
     max-height: 100%;
     height: 100%;
-    width: 20%;
+    width: 15em;
 }
 #PAPER {
-    grid-row: 1/3;
-    grid-column: 1/3;
     align-self: center;
     justify-self: center;
     border-radius: 50%;
-    max-width: 100%;
-    max-height: 100%;
-    width: 100%;
-    height: 100%;
-}
-#scissorsButton {
-    grid-row: 1/3;
-    grid-column: 2/3;
-    align-self: center;
-    justify-self: center;
-    max-width: 100%;
+    min-width: 1.5em;
     max-height: 100%;
     height: 100%;
-    width: 40%;
+    width: 15em;
 }
 #SCISSORS {
-    grid-row: 1/3;
-    grid-column: 2/3;
-    position: center;
+    align-self: end;
+    justify-self: center;
+    min-width: 1.5em;
     border-radius: 50%;
-    padding-top: 6px;
-    max-width: 100%;
     max-height: 100%;
-    width: 100%;
     height: 100%;
+    width: 15em;
 }
 #again {
-    grid-row: 5/6;
-    grid-column: 2/4;
     align-self: center;
-    justify-self: center;
+    justify-self: end;
 }
