--- a/cssStyles.css
+++ b/cssStyles.css
@@ -10,6 +10,10 @@
     grid-template-rows: 20% 20% 20% 20% 20%;
     max-height: 10em;
     max-width: 100%;
+    font-size: 3em;
+}
+h1 {
+    font-size: 67%;
 }
 .title {
     justify-content: center;
@@ -61,11 +65,11 @@
     justify-self: center;
 }
 #tallies {
-    width: 100%;
+    width: 100vw;
     display: grid;
     grid-template-columns: 30% 40% 30%;
     justify-content: space-between;
-    padding: 1em 1em;
+    padding: 0em;
     height: 20em;
 }
 #playerBox {
@@ -74,10 +78,10 @@
     grid-template-rows: 25% 25% 25% 25%;
 }
 #scouts {
-    width: 100%;
+    width: 65%;
     align-self: center;
     justify-self: center;
-    grid-column: 2/4;
+    grid-column: 1/5;
     grid-row: 2/4;
 }
 #playerWin {
@@ -113,10 +117,10 @@
 }
 #titans {
     grid-row: 2/4;
-    grid-column: 2/4;
+    grid-column: 1/5;
     justify-self: center;
     align-self: center;
-    width: 100%;
+    width: 65%;
     height: auto;
 }
 #computerWin {
@@ -134,7 +138,7 @@
     color: white;
 }
 #gamePlay {
-    height: 18em;
+    height: 19em;
     max-height: 100%;
     width: 100vw;
 }
@@ -152,35 +156,177 @@
    height: 15em;
    max-width: 100vw;
    margin: auto;
+   display: flex;
+   justify-content: center;
+   align-content: center;
 }
 #ROCK {
-    align-self: start;
-    justify-self: center;
     border-radius: 50%;
     min-width: 1.5em;
     max-height: 100%;
     height: 100%;
-    width: 15em;
+    width: 18em;
+    padding: 0px;
 }
 #PAPER {
-    align-self: center;
-    justify-self: center;
     border-radius: 50%;
     min-width: 1.5em;
     max-height: 100%;
     height: 100%;
-    width: 15em;
+    width: 18em;
+    padding: 0px;
 }
 #SCISSORS {
-    align-self: end;
-    justify-self: center;
     min-width: 1.5em;
     border-radius: 50%;
     max-height: 100%;
     height: 100%;
-    width: 15em;
+    width: 18em;
+    padding: 0px;
+}
+@media only screen and (max-width: 768px) {
+    #header {
+        height: 8em;
+        display: grid;
+        grid-template-columns: 30% 40% 30%;
+        grid-template-rows: 25% 50% 25%;
+        order: 1;
+    }
+    #title {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+    .title {
+        font-size: 50%;
+        justify-content: center;
+        align-content: center;
+        margin: auto;
+    }
+    #titans3 {
+        display: none;
+    }
+    #topwall {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    #wide {
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+    #ymir {
+        display: none;
+    }
+    #titans2 {
+        grid-column: 3/4;
+        grid-row: 2/3;
+    }
+    #tallies {
+        height: 10em;
+    }
+    #scouts {
+        grid-column: 1/5;
+        justify-self: center;
+        width: 90%;
+    }
+    #titans {
+        grid-column:1/5;
+        justify-self: center;
+        width: 90%;
+    }
+    #playerWin {
+        grid-column: 1/3;
+        justify-self: end;
+        align-self: end;
+    }
+    #playerTally {
+        grid-column: 3/5;
+        justify-self: center;
+        align-self: end;
+    }
+    #tallyPlayer {
+        margin: 0;
+    }
+    #computerWin {
+        grid-column: 1/4; /* 1/3 for short */
+        justify-self: end;
+        align-self: end;
+    }
+    #computerTally {
+        grid-column: 4/5; /* 3/5 for short */
+        justify-self: center;
+        align-self: end;
+    }
+    #tallyComputer {
+        margin: 0;
+    }
+    #playerButtons {
+        height: 8em;
+        width: 100%;
+        margin: auto;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+    }   
+    #ROCK {
+        border-radius: 50%;
+        height: 10em;
+        width: 10em;
+        padding: 0px;
+    }
+    #PAPER {
+        border-radius: 50%;
+        height: 10em;
+        width: 10em;
+        padding: 0px;
+    }
+    #SCISSORS {
+        border-radius: 50%;
+        height: 10em;
+        width: 10em;
+        padding: 0px;
+    }
+} 
+@media only screen and (max-width: 1440px) {
+    h1 {
+        font-size: 50%;
+    }
+    #scouts {
+        width: 90%;
+    }
+    #titans {
+        width: 90%;
+    }
+}
+@media only screen and (max-width: 1040px) {
+    h1 {
+        font-size: 35%;
+    }
+}
+@media only screen and (max-width: 425px) {
+    #header {
+        height: 3em;
+    }
+    #ROCK {
+        border-radius: 50%;
+        height: 8em;
+        width: 8em;
+        padding: 0px;
+    }
+    #PAPER {
+        border-radius: 50%;
+        height: 8em;
+        width: 8em;
+        padding: 0px;
+    }
+    #SCISSORS {
+        border-radius: 50%;
+        height: 8em;
+        width: 8em;
+        padding: 0px;
+    }
 }
 #again {
+    display: flex;
     align-self: center;
-    justify-self: end;
+    justify-content: center;
 }
