--- a/cssStyles.css
+++ b/cssStyles.css
@@ -103,6 +103,22 @@ h1 {
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
 }
+#fiveText {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    justify-self: center;
+    align-self:start;
+    color: white;
+}
+#fightText {
+    grid-column: 1/3;
+    grid-row: 1/2;
+    justify-self: center;
+    align-self: start;
+    color: white;
+    position: relative;
+    top: 12%;
+}
 #erwinPic {
     grid-row: 1/3;
     grid-column: 1/3;
@@ -175,6 +191,10 @@ h1 {
     border: none;
     background-size: cover;
 }
+#ROCK:focus:not(:focus-visible) {
+    box-shadow: none;
+    outline: 0;
+}
 #PAPER {
     border-radius: 50%;
     min-width: 1.5em;
@@ -190,6 +210,10 @@ h1 {
     border: none;
     background-size:contain;
 }
+#PAPER:focus:not(:focus-visible) {
+    box-shadow: none;
+    outline: 0;
+}
 #SCISSORS {
     min-width: 1.5em;
     border-radius: 50%;
@@ -204,6 +228,24 @@ h1 {
     background-repeat: no-repeat;
     border: none;
     background-size:contain;
+}
+#SCISSORS:focus:not(:focus-visible) {
+    box-shadow: none;
+    outline: 0;
+}
+#again {
+    display: flex;
+    align-self: center;
+    justify-content: center;
+}
+#playAgain {
+    color: white;
+    background-color: black;
+    border: none;
+}
+#playAgain:focus:not(:focus-visible) {
+    box-shadow: none;
+    outline: 0;
 }
 @media only screen and (max-width: 768px) {
     #header {
@@ -267,6 +309,16 @@ h1 {
     #tallyPlayer {
         margin: 0;
     }
+    #fiveText {
+        position: relative;
+        bottom: 90%;
+    }
+    #fightText {
+        position: relative;
+        bottom: 70%;
+        top:auto;
+        
+    }
     #computerWin {
         grid-column: 1/4; /* 1/3 for short */
         justify-self: end;
@@ -280,6 +332,8 @@ h1 {
     #tallyComputer {
         margin: 0;
     }
+}
+@media only screen and (max-width: 725px) {
     #playerButtons {
         height: 8em;
         width: 100%;
@@ -326,10 +380,29 @@ h1 {
     h1 {
         font-size: 35%;
     }
+    #fiveText {
+        width: 150%;
+        text-align: center;
+    }
+    #fightText {
+        width: 150%;
+        text-align: center;
+    }
 }
 @media only screen and (max-width: 425px) {
     #header {
         height: 2.5em;
+    }
+    #erwinPic {
+        align-self: end;
+    }
+    #fiveText {
+        width: 100vw;
+        bottom: 50%;
+    }
+    #fightText {
+        width: 100vw;
+        bottom: 25%;
     }
     #ROCK {
         border-radius: 50%;
@@ -357,9 +430,16 @@ h1 {
     .title {
         font-size: 40%;
     }
+    #fiveText {
+        bottom: 40%;
+    }
+    #fightText {
+        bottom: 15%;
+    }
 }
-#again {
-    display: flex;
-    align-self: center;
-    justify-content: center;
+@media only screen and (min-width: 500px) {
+    #again {
+        position: relative;
+        top: 2em;
+    }
 }
