--- a/cssStyles.css
+++ b/cssStyles.css
@@ -126,6 +126,14 @@ h1 {
     justify-self: center;
     max-width: 100%;
 }
+#winPic {
+    grid-row: 1/3;
+    grid-column: 1/3;
+    align-self: center;
+    justify-self: center;
+    max-width: 45%;
+    visibility: hidden;
+}
 #compBox {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
@@ -247,6 +255,40 @@ h1 {
     box-shadow: none;
     outline: 0;
 }
+@media only screen and (max-width: 1440px) {
+    h1 {
+        font-size: 50%;
+    }
+    #scouts {
+        width: 90%;
+    }
+    #titans {
+        width: 90%;
+    }
+    #topwall {
+        max-width: 90%;
+        max-height: 90%;
+    }
+    #winPic {
+        max-width: 60%;
+    }
+}
+@media only screen and (max-width: 1040px) {
+    h1 {
+        font-size: 35%;
+    }
+    #fiveText {
+        width: 150%;
+        text-align: center;
+    }
+    #fightText {
+        width: 150%;
+        text-align: center;
+    }
+    #winPic {
+        max-width: 79%;
+    }
+}
 @media only screen and (max-width: 768px) {
     #header {
         height: 6em;
@@ -317,7 +359,9 @@ h1 {
         position: relative;
         bottom: 70%;
         top:auto;
-        
+    }
+    #winPic {
+        max-width: 100%;
     }
     #computerWin {
         grid-column: 1/4; /* 1/3 for short */
@@ -361,34 +405,6 @@ h1 {
         padding: 0px;
     }
 } 
-@media only screen and (max-width: 1440px) {
-    h1 {
-        font-size: 50%;
-    }
-    #scouts {
-        width: 90%;
-    }
-    #titans {
-        width: 90%;
-    }
-    #topwall {
-        max-width: 90%;
-        max-height: 90%;
-    }
-}
-@media only screen and (max-width: 1040px) {
-    h1 {
-        font-size: 35%;
-    }
-    #fiveText {
-        width: 150%;
-        text-align: center;
-    }
-    #fightText {
-        width: 150%;
-        text-align: center;
-    }
-}
 @media only screen and (max-width: 425px) {
     #header {
         height: 2.5em;
@@ -403,6 +419,9 @@ h1 {
     #fightText {
         width: 100vw;
         bottom: 25%;
+    }
+    #winPic {
+        align-self: end;
     }
     #ROCK {
         border-radius: 50%;
