--- a/cssStyles.css
+++ b/cssStyles.css
@@ -228,6 +228,8 @@ h1 {
     background-repeat: no-repeat;
     border: none;
     background-size: cover;
+    position: relative;
+    right: 1%;
 }
 #ROCK:focus:not(:focus-visible) {
     box-shadow: none;
@@ -266,6 +268,8 @@ h1 {
     background-repeat: no-repeat;
     border: none;
     background-size:contain;
+    position: relative;
+    left: 1%;
 }
 #SCISSORS:focus:not(:focus-visible) {
     box-shadow: none;
@@ -508,6 +512,14 @@ h1 {
     }
     #fightText {
         bottom: 10%;
+    }
+    #ROCK {
+        position: relative;
+        right: 0;
+    }
+    #SCISSORS {
+        position: relative;
+        left: 0;
     }
 }
 @media only screen and (min-width: 500px) {
