--- a/cssStyles.css
+++ b/cssStyles.css
@@ -143,6 +143,7 @@ h1 {
     color: white;
     position: relative;
     top: 12%;
+    text-align: center;
 }
 #erwinPic {
     grid-row: 1/3;
@@ -291,6 +292,12 @@ h1 {
 #playAgain:focus:not(:focus-visible) {
     box-shadow: none;
     outline: 0;
+}
+@media only screen and (min-width: 2000px) {
+    .tallyText {
+        position: relative;
+        top: 2.5em;
+    }
 }
 @media only screen and (max-width: 1440px) {
     h1 {
