--- a/cssStyles.css
+++ b/cssStyles.css
@@ -95,6 +95,12 @@ h1 {
 }
 .gameText {
     font-family: 'EvilGenius';
+    opacity: 1;
+    animation: fadeIn linear 1.25s;
+}
+@keyframes fadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
 }
 #playerBox {
     display: grid;
@@ -134,6 +140,8 @@ h1 {
     justify-self: center;
     align-self:start;
     color: white;
+    position: relative;
+    bottom: 3%;
 }
 #fightText {
     grid-column: 1/3;
@@ -142,7 +150,7 @@ h1 {
     align-self: start;
     color: white;
     position: relative;
-    top: 12%;
+    top: 9%;
     text-align: center;
 }
 #erwinPic {
@@ -162,6 +170,16 @@ h1 {
     justify-self: center;
     max-width: 45%;
     max-height: 100%;
+    opacity: 0;
+    transition: opacity 1.75s ease-in;
+}
+#losePic {
+    grid-row: 1/3;
+    grid-column: 1/3;
+    align-self: center;
+    justify-self: center;
+    max-width: 100%;
+    width: 45%;
     opacity: 0;
     transition: opacity 1.75s ease-in;
 }
@@ -294,17 +312,39 @@ h1 {
     outline: 0;
 }
 @media only screen and (min-width: 2000px) {
+    .title {
+        font-size: 90%;
+    }
     .tallyText {
         position: relative;
         top: 2.5em;
+    }
+    #erwinPic {
+        width: 45%;
+        position: relative;
+        top: 9%;
+    }
+    #winPic {
+        position: relative;
+        top: 9%;
+    }
+    #losePic {
+        position: relative;
+        top: 9%;
     }
 }
 @media only screen and (max-width: 1440px) {
     h1 {
         font-size: 50%;
     }
+    #erwinPic {
+        width: 60%;
+    }
     #winPic {
         max-width: 60%;
+    }
+    #losePic {
+        width: 60%;
     }
     .gameText {
         font-size: 67%;
@@ -325,8 +365,14 @@ h1 {
         width: 150%;
         text-align: center;
     }
+    #erwinPic {
+        width: 79%;
+    }
     #winPic {
         max-width: 79%;
+    }
+    #losePic {
+        width: 79%;
     }
     #titans {
         width: 85%;
@@ -406,8 +452,14 @@ h1 {
         bottom: 60%;
         top:auto;
     }
+    #erwinPic {
+        width: 100%;
+    }
     #winPic {
         max-width: 100%;
+    }
+    #losePic {
+        width: 100%;
     }
     #computerWin {
         grid-column: 1/4; /* 1/3 for short */
@@ -459,9 +511,8 @@ h1 {
         border-width: .5%;
     }
     #erwinPic {
-        align-self: end;
         position: relative;
-        bottom: 20%;
+        top: 20%;
     }
     #fiveText {
         width: 100vw;
@@ -472,7 +523,12 @@ h1 {
         bottom: 7%;
     }
     #winPic {
-        align-self: end;
+        position: relative;
+        top: 20%;
+    }
+    #losePic {
+        position: relative;
+        top: 20%;
     }
     .gameText {
         font-size: 50%;
@@ -519,6 +575,10 @@ h1 {
     }
     #fightText {
         bottom: 10%;
+    }
+    #erwinPic {
+        position: relative;
+        bottom: 20%;
     }
     #ROCK {
         position: relative;
