--- a/cssStyles.css
+++ b/cssStyles.css
@@ -234,13 +234,6 @@ h1 {
    align-content: center;
 }
 #ROCK {
-    border-radius: 50%;
-    min-width: 1.5em;
-    max-height: 100%;
-    height: 100%;
-    width: 18em;
-    padding: 0px;
-    color: white;
     background-color: black;
     background-image: url(/imgs/rockfinal3.png);
     background-position: center;
@@ -255,13 +248,6 @@ h1 {
     outline: 0;
 }
 #PAPER {
-    border-radius: 50%;
-    min-width: 1.5em;
-    max-height: 100%;
-    height: 100%;
-    width: 18em;
-    padding: 0px;
-    color: white;
     background-color: black;
     background-image: url(/imgs/paperfinal3.png);
     background-position: center;
@@ -274,13 +260,6 @@ h1 {
     outline: 0;
 }
 #SCISSORS {
-    min-width: 1.5em;
-    border-radius: 50%;
-    max-height: 100%;
-    height: 100%;
-    width: 18em;
-    padding: 0px;
-    color: white;
     background-color: black;
     background-image: url(/imgs/scissorsfinal2.png);
     background-position: center;
@@ -294,8 +273,19 @@ h1 {
     box-shadow: none;
     outline: 0;
 }
+.buttons {
+    font-family: 'EvilGenius';
+    color: white;
+    text-shadow: 0px 0px 10px white;
+    min-width: 1.5em;
+    border-radius: 50%;
+    max-height: 100%;
+    height: 100%;
+    width: 18em;
+    padding: 0px;
+}
 .buttons:hover {
-    box-shadow: 0 0 20px  white !important;
+    box-shadow: 0 0 20px white !important;
 }
 #again {
     display: flex;
@@ -304,8 +294,12 @@ h1 {
 }
 #playAgain {
     color: white;
+    font-family: 'CloisterBlack';
     background-color: black;
     border: none;
+}
+#playAgain:hover {
+    text-shadow: 0 0 20px white;
 }
 #playAgain:focus:not(:focus-visible) {
     box-shadow: none;
@@ -571,10 +565,10 @@ h1 {
         font-size: 40%;
     }
     #fiveText {
-        bottom: 30%;
+        bottom: 17%;
     }
     #fightText {
-        bottom: 10%;
+        bottom: 2%;
     }
     #erwinPic {
         position: relative;
